# kaniop

./: .commitlintrc.json  .gitignore  .pre-commit-config.yaml  .yamllint.yaml  AGENTS.md  CHANGELOG.md  CLAUDE.md  Cargo.toml  Dockerfile  Makefile  README.md  WEBHOOK_IMPLEMENTATION_PLAN.md  cliff.toml  renovate.json5
.ci/: cliff-chart.toml  release.sh  validate-version-sync.sh
.github/: copilot-instructions.md  kind-cluster-1.30.yaml  kind-cluster-1.32.yaml
.github/workflows/: auto-tag.yaml  auto-tag.yml  commitlint.yml  crd-migration-e2e.yml  docker_images.yml  helm.yml  pages.yml  pre-commit.yml  rust.yml  verify-examples.yaml
.opencode/skills/document-learnings/: SKILL.md
.opencode/skills/examples/: SKILL.md
.opencode/skills/helm-chart/: SKILL.md
.opencode/skills/release/: SKILL.md
Documentation/: .gitignore  book.toml  llm.txt
Documentation/plans/: argocd-migration-e2e-ci.md
Documentation/src/: SUMMARY.md  contributing.md  index.md  installation.md  quickstart.md  replication-test-report.md  usage.md
Documentation/src/upgrade/: v0.11-migration.md
Documentation/src/usage/: group.md  kanidm.md  oauth2.md  person.md  service.md
charts/: Makefile
charts/kaniop/: Chart.yaml  README.md  artifacthub-repo.yaml  values.schema.json  values.yaml
charts/kaniop/crds/: crd-kanidm.yaml
charts/kaniop/files/: prometheusrules.yaml
charts/kaniop/files/dashboards/: kaniop.json
charts/kaniop/templates/: _helpers.tpl  clusterrole.yaml  dashboard-configmap.yaml  deployment.yaml  prometheusrules.yaml  validating-admission-policy-binding-kanidm.yaml  validating-admission-policy-kanidm-oauth2.yaml  validating-admission-policy-kanidm.yaml  validating-admission-policy.yaml
charts/kaniop/templates/crd-migration/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  job-migrate.yaml  job-verify.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
charts/kaniop/templates/validating-admission-policies/: binding-kanidm-group.yaml  binding-kanidm-oauth2.yaml  binding-kanidm-person.yaml  binding-kanidm-service-account.yaml  kanidm-group.yaml  kanidm-oauth2.yaml  kanidm-person.yaml  kanidm-service-account.yaml  kanidm.yaml
charts/kaniop/templates/webhook/: _helpers.tpl  cert-manager.yaml  deployment.yaml  service.yaml  validating-webhook-configuration.yaml
charts/kaniop/templates/webhook/job-patch/: _helpers.tpl  clusterrole.yaml  clusterrolebinding.yaml  job-create-secret.yaml  job-patch-webhook.yaml  role.yaml  rolebinding.yaml  serviceaccount.yaml
charts/kaniop/tests/: clusterrole_test.yaml  crd-migration_test.yaml  dashboard-configmap_test.yaml  deployment_test.yaml  prometheusrules_test.yaml  validating-webhook-configuration_test.yaml  webhook-certificate_test.yaml  webhook-deployment_test.yaml  webhook-job-create-secret_test.yaml  webhook-job-patch_test.yaml  webhook-service_test.yaml
charts/kaniop/tests/values/: all.yaml
cmd/crd-migrator/: Cargo.toml
cmd/crd-migrator/src/: main.rs
cmd/crdgen/: Cargo.toml
cmd/crdgen/src/: main.rs
cmd/examples/: Cargo.toml
cmd/examples/src/: group.rs  kanidm.rs  main.rs  oauth2.rs  person.rs  service_account.rs  yaml.rs
cmd/operator/: Cargo.toml
cmd/operator/src/: main.rs
cmd/webhook/: Cargo.toml
cmd/webhook/src/: admission.rs  handlers.rs  kanidm_client.rs  main.rs  resources.rs  state.rs  sync.rs  validator.rs
docs/: dns-resolution.md
examples/: group.yaml  kanidm-custom-css.yaml  kanidm-existing-claim.yaml  kanidm-ingress.yaml  kanidm-replication.yaml  kanidm-tls.yaml  kanidm.yaml  oauth2.yaml  person.yaml  service-account.yaml
examples/group/: complete.yaml  minimal.yaml
examples/kanidm/: kanidm.yaml  replication.yaml
examples/person/: basic.yaml  posix.yaml
libs/crd-migration/: Cargo.toml
libs/crd-migration/src/: backup.rs  checksum.rs  crd.rs  lib.rs  migration.rs  sanitize.rs  state.rs  verify.rs
libs/group/: Cargo.toml
libs/group/src/: controller.rs  crd.rs  reconcile.rs
libs/k8s-util/: Cargo.toml
libs/k8s-util/src/: client.rs  error.rs  events.rs  image.rs  lib.rs  metrics.rs  parse.rs  resources.rs  rotation.rs  types.rs  url.rs
libs/kanidm/: Cargo.toml
libs/kanidm/src/: controller.rs  crd.rs  lib.rs
libs/kanidm/src/reconcile/: ingress.rs  mod.rs  secret.rs  service.rs  statefulset.rs  status.rs
libs/oauth2/: Cargo.toml
libs/oauth2/src/: controller.rs  crd.rs  image.rs  lib.rs  reconcile.rs
libs/oauth2/src/reconcile/: mod.rs  secret.rs  status.rs
libs/operator/: Cargo.toml  build.rs
libs/operator/src/: controller.rs  crd.rs  error.rs  leader_election.rs  lib.rs  metrics.rs  prometheus_exporter.rs  telemetry.rs  version.rs
libs/operator/src/controller/: context.rs  kanidm.rs  mod.rs
libs/operator/src/crd/: kanidm.rs  mod.rs
libs/operator/src/kanidm/: controller.rs  crd.rs  image.rs  mod.rs  reconcile.rs
libs/operator/src/kanidm/controller/: context.rs  mod.rs
libs/operator/src/kanidm/reconcile/: domain_appearance.rs  gateway.rs  ingress.rs  mail_sender.rs  mod.rs  secret.rs  service.rs  statefulset.rs  status.rs
libs/operator/src/reconcile/: ingress.rs  mod.rs  secret.rs  service.rs  statefulset.rs  status.rs
libs/person/: Cargo.toml
libs/person/src/: controller.rs  crd.rs  reconcile.rs
libs/service-account/: Cargo.toml
libs/service-account/src/: controller.rs  crd.rs
libs/service-account/src/reconcile/: mod.rs  secret.rs  status.rs
tests/: Cargo.toml
tests/e2e/: kanidm.rs  lib.rs
tests/e2e/scripts/: crd-migration-argocd.sh  crd-migration-failures.sh  crd-migration-helm.sh
tests/e2e/test/: crd_migration.rs  group.rs  kanidm_ref.rs  mail_sender.rs  mod.rs  oauth2.rs  oauth2_secret_key_aliases.rs  oauth2_secret_template.rs  person.rs  person_1103.rs  service_account.rs
tests/e2e/test/kanidm/: domain_appearance.rs  mod.rs  replication.rs  upgrade.rs
