[workspace]
members = ["cmd/crdgen", "cmd/operator", "libs/k8s-util", "libs/kanidm", "libs/operator", "libs/person", "tests"]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.81"
edition = "2021"
license-file = "LICENSE.md"
repository = "https://github.com/pando85/kanidm-operator"
homepage = "https://github.com/pando85/kanidm-operator"
readme = "README.md"

[workspace.dependencies]
kaniop-k8s-util = { path = "libs/k8s-util", version = "0.0.0" }
kaniop-kanidm = { path = "libs/kanidm", version = "0.0.0" }
kaniop-person = { path = "libs/person", version = "0.0.0" }
kaniop-operator = { path = "libs/operator", version = "0.0.0" }
chrono = "0.4.26"
clap = { version = "4.5", features = ["std", "derive"] }
futures = "0.3"
http = "1.1"
json-patch = "3.0"
k8s-openapi = { version = "0.23", default-features = false, features = ["v1_30"] }
kanidm_client = "1.4.2"
kanidm_proto = "1.4.2"
kube = { version = "0.97", default-features = true, features = ["client", "derive", "unstable-runtime"] }
prometheus-client = "0.22.3"
serde = "1.0"
serde_json = "1.0"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
schemars = "0.8"
# dependency for kanidm packages required for cross compilation
# https://github.com/cross-rs/cross/wiki/Recipes#openssl
openssl = { version = '*', features = ["vendored"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.release-e2e]
inherits = "release"
lto = "thin"
codegen-units = 32

[profile.e2e]
inherits = "dev"
lto = "thin"
codegen-units = 32
