[workspace]
members = [
    "cmd/crdgen",
    "cmd/examples",
    "cmd/operator",
    "libs/k8s-util",
    "libs/group",
    "libs/oauth2",
    "libs/operator",
    "libs/person",
    "tests",
]
resolver = "2"

[workspace.package]
version = "0.0.0"
authors = ["Pando85 <pando855@gmail.com>"]
rust-version = "1.85"
edition = "2024"
license-file = "LICENSE.md"
repository = "https://github.com/pando85/kanidm-operator"
homepage = "https://github.com/pando85/kanidm-operator"
readme = "README.md"

[workspace.dependencies]
kaniop-group = { path = "libs/group", version = "0.0.0" }
kaniop-k8s-util = { path = "libs/k8s-util", version = "0.0.0" }
kaniop-oauth2 = { path = "libs/oauth2", version = "0.0.0" }
kaniop-operator = { path = "libs/operator", version = "0.0.0" }
kaniop-person = { path = "libs/person", version = "0.0.0" }
chrono = "0.4.26"
clap = { version = "4.5", features = ["std", "derive"] }
futures = "0.3"
http = "1.1"
json-patch = "4.0"
k8s-openapi = { version = "0.24", default-features = false, features = ["v1_32"] }
kanidm_client = "1.6.2"
kanidm_proto = "1.6.2"
kube = { version = "0.99", default-features = true, features = ["client", "derive", "unstable-runtime"] }
prometheus-client = "0.23.0"
serde = "1.0"
serde_plain = "1.0"
serde_json = "1.0"
serde_yaml = "0.9"
tokio = { version = "1.38", features = ["macros", "rt-multi-thread"] }
tracing = "0.1.40"
tempfile = "3.10"
schemars = "0.8"
# dependency for kanidm packages required for cross compilation
# https://github.com/cross-rs/cross/wiki/Recipes#openssl
openssl = { version = '*', features = ["vendored"] }

[profile.release]
codegen-units = 1
opt-level = 3
lto = "fat"
panic = "abort"
strip = "symbols"

[profile.release-e2e]
inherits = "release"
lto = "thin"
codegen-units = 32

[profile.e2e]
inherits = "dev"
lto = "thin"
codegen-units = 32
