[package]
name = "tests"
version = "0.0.0"
edition = "2021"

[lib]
name = "e2e"
path = "e2e/lib.rs"

[features]
default = []
e2e-test = []

[dependencies]
kaniop-kanidm = { workspace = true, features = ["schemars"] }
kaniop-operator = { workspace = true }
futures = { workspace = true }
json-patch = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
