[package]
name = "tests"
version = "0.0.0"
edition = "2021"

[lib]
name = "e2e"
path = "e2e/lib.rs"

[features]
default = []
e2e-test = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml = "0.8"

[dev-dependencies]
kaniop-kanidm = { workspace = true, features = ["schemars"] }
kaniop-person = { workspace = true, features = ["schemars"] }
kaniop-k8s-util = { workspace = true }
kaniop-operator = { workspace = true }
kanidm_client = { workspace = true }
futures = { workspace = true }
json-patch = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
backon = "1.3"
chrono = { workspace = true }
