[package]
name = "kaniop-e2e-tests"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "e2e"
path = "e2e/lib.rs"

[features]
default = []
e2e-test = []

[dependencies]
serde = { workspace = true, features = ["derive"] }
toml = "0.8"

[dev-dependencies]
kaniop-group = { workspace = true, features = ["schemars"] }
kaniop-operator = { workspace = true, features = ["schemars"] }
kaniop-oauth2 = { workspace = true, features = ["schemars"] }
kaniop-person = { workspace = true, features = ["schemars"] }
kaniop-k8s-util = { workspace = true }
kanidm_client = { workspace = true }
futures = { workspace = true }
json-patch = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
backon = "1.3"
chrono = { workspace = true }
time = "0.3"
