[package]
name = "kaniop-crdgen"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "crdgen"
path = "src/main.rs"

[dependencies]
kaniop-kanidm = { workspace = true, features = ["schemars"] }
kaniop-person = { workspace = true, features = ["schemars"] }
kube = { workspace = true }
serde = { workspace = true }
serde_yaml = "0.9"
