[package]
name = "kaniop-crdgen"
description = "Custom Resource Definition generator for the Kanidm operator"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "crdgen"
path = "src/main.rs"

[dependencies]
kaniop-oauth2 = { workspace = true, features = ["schemars"] }
kaniop-group = { workspace = true, features = ["schemars"] }
kaniop-operator = { workspace = true, features = ["schemars"] }
kaniop-person = { workspace = true, features = ["schemars"] }
kube = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
