[package]
name = "kaniop-examples"
description = "Custom resource examples generator for the Kanidm operator"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true


[[bin]]
name = "examples-gen"
path = "src/main.rs"

[dependencies]
kaniop-oauth2 = { workspace = true, features = ["schemars"] }
kaniop-group = { workspace = true, features = ["schemars"] }
kaniop-operator = { workspace = true, features = ["schemars", "examples-gen"] }
kaniop-person = { workspace = true, features = ["schemars"] }
kaniop-service-account = { workspace = true, features = ["schemars"] }
schemars = { version = "1", features = ["preserve_order"] }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde = { workspace = true }
serde_yaml = { workspace = true }
serde_json = { workspace = true }

[dev-dependencies]
tempfile = { workspace = true }
