[package]
name = "kaniop"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "kaniop"
path = "src/main.rs"

[dependencies]
kaniop-group = { workspace = true }
kaniop-k8s-util = { workspace = true }
kaniop-oauth2 = { workspace = true }
kaniop-operator = { workspace = true }
kaniop-person = { workspace = true }
clap = { workspace = true, features = ["cargo", "env"] }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
prometheus-client = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0"
axum = "0.7"
