[package]
name = "kaniop"
description = "Kubernetes operator for Kanidm identity management system"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "kaniop"
path = "src/main.rs"

[dependencies]
kaniop-group = { workspace = true }
kaniop-k8s-util = { workspace = true }
kaniop-oauth2 = { workspace = true }
kaniop-operator = { workspace = true }
kaniop-person = { workspace = true }
kaniop-service-account = { workspace = true }
clap = { workspace = true, features = ["cargo", "env"] }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
opentelemetry = { workspace = true }
opentelemetry_sdk = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0"
axum = "0.8"
axum-server = "0.8"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
# Kanidm dependency
rustls = { workspace = true }
