[package]
name = "kaniop-webhook"
description = "Admission webhook for Kaniop"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[[bin]]
name = "kaniop-webhook"
path = "src/main.rs"

[dependencies]
kaniop-group = { workspace = true }
kaniop-k8s-util = { workspace = true }
kaniop-operator = { workspace = true }
kaniop-person = { workspace = true }
kaniop-oauth2 = { workspace = true }
kaniop-service-account = { workspace = true }
clap = { workspace = true, features = ["cargo", "env"] }
k8s-openapi = { workspace = true }
kanidm_client = { workspace = true }
kube = { workspace = true }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
anyhow = "1.0"
axum = "0.8"
axum-server = { version = "0.8", features = ["tls-rustls"] }
rustls = { workspace = true }
rustls-pemfile = "2.2"
futures = { workspace = true }
tokio-rustls = "0.26"
notify = "8.2"
