[package]
name = "kaniop-group"
description = "Kanidm group management for the Kubernetes operator"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "kaniop_group"
path = "src/lib.rs"

[features]
default = ["schemars"]
schemars = ["dep:schemars", "k8s-openapi/schemars", "kaniop-operator/schemars"]
integration-test = []

[dependencies]
kaniop-k8s-util = { workspace = true }
kaniop-operator = { workspace = true }
kanidm_client = { workspace = true }
kanidm_proto = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
time = "0.3"
serde = { workspace = true }
schemars = { workspace = true, optional = true }
openssl = { workspace = true }
