[package]
name = "kaniop-k8s-util"
description = "Kubernetes utilities for the Kanidm operator"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "kaniop_k8s_util"
path = "src/lib.rs"

[features]
default = []

[dependencies]
kanidm_proto = { workspace = true }
kanidm_client = { workspace = true }
futures = { workspace = true }
http = { workspace = true }
json-patch = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true, features = ["ws"] }
prometheus-client = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.12"
tower = "0.5"
hyper-util = { version = "0.1.9", features = ["client-legacy", "http1", "tokio"] }
url-escape = "0.1.1"
hostname = "0.4"
url = { workspace = true }
openssl = { workspace = true }

[build-dependencies]
openssl = { workspace = true }
