[package]
name = "kaniop-kanidm"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "kaniop_kanidm"
path = "src/lib.rs"

[features]
default = []
schemars = ["dep:schemars", "k8s-openapi/schemars"]
integration-test = []

[dependencies]
kaniop-k8s-util = { workspace = true }
kaniop-operator = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { version = "0.4.26", features = ["serde"] }
serde = "1.0"
tonic = "0.12"
schemars = { version = "0.8", optional = true }
serde_plain = "1.0.2"

[dev-dependencies]
http = { workspace = true }
hyper = "1"
tower-test = "0.4.0"
testcontainers = "0.23"
tempfile = "3.10"
