[package]
name = "kaniop-kanidm"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "kaniop_kanidm"
path = "src/lib.rs"

[features]
default = []
schemars = ["dep:schemars", "k8s-openapi/schemars"]
integration-test = []

[dependencies]
kaniop-k8s-util = { workspace = true }
kaniop-operator = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
serde = { workspace = true }
serde_plain = { workspace = true }
tonic = "0.12"
schemars = { workspace = true, optional = true }

[dev-dependencies]
http = { workspace = true }
hyper = "1"
tower-test = "0.4.0"
testcontainers = "0.23"
tempfile = "3.10"
