[package]
name = "kaniop-operator"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "kaniop_operator"
path = "src/lib.rs"

[features]
default = []
integration-test = []

[dependencies]
kaniop-k8s-util = { workspace = true }
kanidm_client = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
backon = "1.3"
opentelemetry = { version = "0.27", features = ["trace"] }
opentelemetry_sdk = { version = "0.27", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.27", features = ["tokio"] }
thiserror = "2.0"
time = "0.3"
tracing-opentelemetry = "0.28"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
# dependency for kanidm packages required for cross compilation
# https://github.com/cross-rs/cross/wiki/Recipes#openssl
openssl = { version = '*', features = ["vendored"] }

[build-dependencies]
openssl = { workspace = true }
