[package]
name = "kaniop-operator"
authors.workspace = true
edition.workspace = true
homepage.workspace = true
license-file.workspace = true
readme.workspace = true
repository.workspace = true
rust-version.workspace = true
version.workspace = true

[lib]
name = "kaniop_operator"
path = "src/lib.rs"

[features]
default = []
schemars = ["dep:schemars", "k8s-openapi/schemars"]
integration-test = []

[dependencies]
kaniop-k8s-util = { workspace = true }
kanidm_client = { workspace = true }
kanidm_proto = { workspace = true }
clap = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
prometheus-client = { workspace = true }
serde = { workspace = true }
serde_plain = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
chrono = { workspace = true, features = ["serde"] }
axum = "0.8"
backon = "1.3"
opentelemetry = { version = "0.30", features = ["trace"] }
opentelemetry_sdk = { version = "0.30", features = ["rt-tokio"] }
opentelemetry-otlp = { version = "0.30", features = ["tokio"] }
thiserror = "2.0"
time = "0.3"
tonic = "0.14"
tracing-opentelemetry = "0.31"
tracing-subscriber = { version = "0.3.18", features = ["json", "env-filter"] }
# dependency for kanidm packages required for cross compilation
# https://github.com/cross-rs/cross/wiki/Recipes#openssl
schemars = { workspace = true, optional = true }
openssl = { version = '*', features = ["vendored"] }
url = '*'

[build-dependencies]
openssl = { workspace = true }

[dev-dependencies]
http = { workspace = true }
tempfile = { workspace = true }
hyper = "1"
tower-test = "0.4.0"
testcontainers = "0.25"
