[package]
name = "kaniop-person"
version.workspace = true
authors.workspace = true
rust-version.workspace = true
edition.workspace = true
license-file.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
name = "kaniop_person"
path = "src/lib.rs"

[features]
default = []
schemars = ["dep:schemars", "k8s-openapi/schemars"]
integration-test = []

[dependencies]
kaniop-operator = { workspace = true }
kaniop-k8s-util = { workspace = true }
kanidm_client = { workspace = true }
kanidm_proto = { workspace = true }
futures = { workspace = true }
k8s-openapi = { workspace = true }
kube = { workspace = true }
serde_json = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
serde = { workspace = true }
schemars = { workspace = true, optional = true }
